--- a/react-state-2/react-state-2_table-reservation/public/index.html
+++ b/react-state-2/react-state-2_table-reservation/public/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Greeting</title>
+    <title>React State 2: Table Reservation</title>
   </head>
 
   <body>
